# Orbit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: architecture.md  roadmap.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/orbit/: __init__.py
src/orbit/analytics/: __init__.py  ari.py  failures.py
src/orbit/arena/: __init__.py  engine.py
src/orbit/backend/: __init__.py  app.py
src/orbit/backend/api/: __init__.py
src/orbit/cli/: __init__.py  main.py
src/orbit/database/: __init__.py  models.py  session.py
src/orbit/examples/: __init__.py  coding_agent.py  research_agent.py  retrieval_agent.py
src/orbit/integrations/: __init__.py
src/orbit/integrations/langgraph/: __init__.py  trace.py
src/orbit/integrations/ollama/: __init__.py  client.py
src/orbit/replay/: __init__.py  engine.py
src/orbit/security/: __init__.py  guardrail.py  injection.py  ollama_guard.py
tests/: test_api.py  test_ari.py  test_models.py  test_security.py
