[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit"
version = "0.1.0"
description = "Local-first observability, replay, and security for LangGraph agents running on Ollama."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "ORBIT Contributors" }
]
license = { text = "MIT" }
keywords = [
    "llm", "agents", "observability", "langraph", "ollama",
    "tracing", "replay", "security", "local-ai", "mlops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.36",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "uvicorn>=0.32.0",
    "greenlet>=3.0.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
security = [
    "little-canary>=0.3.0",
]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/samvitgersappa/orbit"
Repository = "https://github.com/samvitgersappa/orbit.git"
Documentation = "https://github.com/samvitgersappa/orbit#readme"
"Bug Tracker" = "https://github.com/samvitgersappa/orbit/issues"

[project.scripts]
orbit = "orbit.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
